--- a/package.json
+++ b/package.json
@@ -17,14 +17,17 @@
     "@iota/dapp-kit": "0.4.1",
     "@iota/iota-sdk": "0.6.0",
     "@radix-ui/themes": "^3.1.1",
-    "@tailwindcss/vite": "^4.1.4",
+    "@tailwindcss/postcss": "^4.1.11",
+    "@tailwindcss/vite": "^4.1.11",
     "@tanstack/react-query": "^5.81.4",
     "@types/react-slick": "^0.23.13",
+    "autoprefixer": "^10.4.21",
     "axios": "^1.6.7",
     "chart.js": "^4.4.1",
     "date-fns": "^3.3.1",
     "framer-motion": "^12.7.4",
     "lucide-react": "^0.501.0",
+    "postcss": "^8.5.6",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
@@ -34,7 +37,7 @@
     "react-slick": "^0.30.3",
     "slick-carousel": "^1.8.1",
     "socket.io-client": "^4.7.4",
-    "tailwindcss": "^4.1.4",
+    "tailwindcss": "^4.1.11",
     "zustand": "^4.5.0"
   },
   "devDependencies": {
@@ -44,12 +47,10 @@
     "@typescript-eslint/eslint-plugin": "^8.18.0",
     "@typescript-eslint/parser": "^8.18.0",
     "@vitejs/plugin-react-swc": "^3.7.0",
-    "autoprefixer": "^10.4.17",
     "eslint": "^9.17.0",
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.7",
-    "postcss": "^8.4.35",
     "prettier": "^3.3.2",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.18.0",
